# mpc-air-bearing-satellite

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CSV_FORMAT.md  DEVELOPMENT_GUIDE.md  HANDOFF_GUIDE.md  HARDWARE_TEST_PROCEDURE.md  LESSONS_LEARNED.md  LICENSE  MISSION_ARCHITECTURE.md  README.md  SECURITY.md  SIMULATION_TESTING_GUIDE.md  TESTING_GUIDE.md  THRUSTER_CALIBRATION.md  TROUBLESHOOTING.md  camera_manager.py  comparison.py  data_logger.py  exceptions.py  extract_initial_velocities.py  gui_components.py  logging_config.py  mission.py  mission_report_generator.py  mission_state_manager.py  mode_setup_manager.py  model.py  mpc.py  navigation_utils.py  path_planning_manager.py  pyproject.toml  real.py  real_data_simulated.py  real_test_modes.py  real_ui_components.py  requirements.txt  satellite_config.py  satellite_hardware_interface.py  simulation.py  (+7 more)
.github/: CONTRIBUTING.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  hardware_issue.md
Cad_Files/Electronics/: 21mm round on-off switch.step  6mm led indicator RED.step  Battery Assembly.step  LED - 12mm - RED.step  LM2596 DC-DC Buck Converter.step  M12 Battery Adapter.step  Milwaukee M12 battery.step  Milwaukee M12 drill battery - case.step  RCWL-1601.step  Solenoid.step  With pins Seeed Studio XIAO-ESP32-S3-Sense.step  Xiao Sense Case v48 - PETG - Left (Open).step  Xiao Sense Case v48 - PETG - Right (Open).step
Cad_Files/Electronics/Header Pins/: 7-Pin Header - Male - 2.54mm.step
Cad_Files/Electronics/JST-XH Connectors/: JST - XH - SMD (R) - 2Pin - 2.54mm.step  JST - XH - SMD (R) - 3Pin - 2.54mm.step  (+4 more)
Cad_Files/Hardware/: 1 to 3 Manifold.step  1 to 8 Manifold.step  1,,4 NPT Plug.step  40ft3 Air Cyllinder 2015 psi.step  60 Degree Brace.step  Air Filter Mount.step  Air Filter.step  Air Flow Control Valve Mount.step  Air Flow Control Valve.step  Cross Brace.step  Electric Base Plate.step  Electric Box Case.step  Electric Middle Plate.step  GAS REGULATOR.step  Nozzle.step  On Off Valve.step  Relay Mount.step  Tank Valve.step
Cad_Files/Platform/: Base.step  Collar.step  Stand Mount.step  Tank Mount.step  Top.step
Cad_Files/Satellite/: Bottom Plate.step  Frame.step  Hight Guide.step  Middle Plate.step
Cad_Files/Stand/: 250mm - 20mm Aluminum Extrusion Cross Side.step  250mm - 20mm Aluminum Extrusion Cross Top.step  250mm - 20mm Aluminum Extrusion.step  Stand.step
DXF/: __init__.py  dxf_shape_maker.py  dxf_viewer.py
DXF/DXF_Files/: Shape1.dxf  Shape2.dxf  Shape3.dxf  Shape4.dxf  Shape5.dxf
Motive/: data_descriptions.py  mocap_data.py  motive_data_server.py  nat_net_client.py
Thruster_Test/: analyze_thruster_data.py  thrust_calibration.py  thruster_test.py
Thruster_Test/Thruster_Data/: MPC_Thruster(1)_20250707_210016.csv  MPC_Thruster(1)_20250707_210431.csv  MPC_Thruster(2)_20250707_213517.csv  MPC_Thruster(2)_20250707_213931.csv  MPC_Thruster(3)_20250707_211344.csv  MPC_Thruster(3)_20250707_211757.csv  MPC_Thruster(4)_20250707_214544.csv  MPC_Thruster(4)_20250707_214958.csv  MPC_Thruster(5)_20250707_203652.csv  MPC_Thruster(5)_20250707_204154.csv  MPC_Thruster(6)_20250707_220131.csv  MPC_Thruster(6)_20250707_220601.csv  MPC_Thruster(7)_20250707_204857.csv  MPC_Thruster(7)_20250707_205320.csv  MPC_Thruster(8)_20250707_221229.csv  MPC_Thruster(8)_20250707_221714.csv
config/: __init__.py  camera.py  constants.py  mission_state.py  mpc_params.py  obstacles.py  physics.py  timing.py
tests/: README.md  __init__.py  conftest.py  test_camera_manager.py  test_config.py  test_data_logger.py  test_integration_basic.py  test_integration_missions.py  test_mission_state_manager.py  test_model.py  test_mpc_controller.py  test_navigation_utils.py  test_path_planning_manager.py  test_simulation_state_validator.py
(+37 files in other folders)
